--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,10 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "laravel/ui": "*",
+        "lcobucci/jwt": "^3.2",
         "nexmo/client": "^2.4",
-        "nexmo/laravel": "^3.0"
+        "nexmo/laravel": "^3.0",
+        "tymon/jwt-auth": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
