--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
+        "ext-json": "*",
         "doctrine/dbal": "^3.3",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
@@ -20,8 +21,7 @@
         "lcobucci/jwt": "^3.2",
         "nexmo/client": "^2.4",
         "nexmo/laravel": "^3.0",
-        "tymon/jwt-auth": "*",
-        "ext-json": "*"
+        "tymon/jwt-auth": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
